# Rental-Price-Prediction-App-to-Micro-Transformation-API-Development

./: Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
app/: run.py
app/api/: predication.py
app/config/: .env  __init__.py  logger.py
app/schema/: apartment.py
app/services/: model_inference.py
