[tool.poetry]
name = "rental price prediction app to micro transformation api development"
version = "0.1.0"
description = ""
authors = ["0xnrous <0xnrous@gmail.com>"]
license = "0xnrous"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
wemake-python-styleguide = "^0.19.2"
ruff = "^0.8.4"
pydantic = "^2.10.4"
loguru = "^0.7.3"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
